icm-macros/testing/unpack/errors/FunctionField.sol
pragma solidity ^0.8.30;

// #[unpack()]
struct HasFunction {
    function() external handler;
}